# spotters

./: .gitignore  .gitmodules  .setup.bash  INSTALL.md  README.md  requirements.txt
docs/: installation.md  main  welcome.md  wiki.md
imu-receiver/: receiver.cpp
input_server/TrueDepthStreamer/: CameraViewController.swift
input_server/TrueDepthStreamer.xcodeproj/: project.pbxproj
input_server/TrueDepthStreamer.xcodeproj/project.xcworkspace/xcuserdata/hooniesun.xcuserdatad/: UserInterfaceState.xcuserstate
report/: ProjectReport.tex
spot_sensor_relay/: dummy.swift
spot_sensor_relay/spot_sensor_relay/: ContentView.swift  Motion.swift  spot_sensor_relayApp.swift
spot_sensor_relay/spot_sensor_relay.xcodeproj/: project.pbxproj
spot_sensor_relay/spot_sensor_relay.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
spot_sensor_relay/spot_sensor_relay.xcodeproj/project.xcworkspace/xcuserdata/kindaraffy.xcuserdatad/: UserInterfaceState.xcuserstate
spot_sensor_relay/spot_sensor_relay.xcodeproj/xcuserdata/kindaraffy.xcuserdatad/xcschemes/: xcschememanagement.plist
spot_sensor_relay/spot_sensor_relayTests/: spot_sensor_relayTests.swift
spot_sensor_relay/spot_sensor_relayUITests/: spot_sensor_relayUITests.swift  spot_sensor_relayUITestsLaunchTests.swift
workspace/.catkin_tools/profiles/default/: devel_collisions.txt
workspace/src/mapping/: CMakeLists.txt  package.xml  setup.py
workspace/src/mapping/launch/: octomap.launch  pipeline.launch
workspace/src/mapping/scripts/: map  pipeline
workspace/src/mapping/src/mapping/: convexHullDiff.py  examples.py  hull.py  hull_plotter.py  legacy.py  mapping_pipeline_alpha.py  pipeline.py  trial.py
workspace/src/mapping/src/spot_geography/pipelines/: point_cloud_pipeline.py
workspace/src/movement/: CMakeLists.txt  package.xml  setup.py
workspace/src/movement/scripts/: move
workspace/src/movement/src/movement/: main.py
workspace/src/spot_cartographer/: CMakeLists.txt  package.xml  setup.py
workspace/src/spot_cartographer/launch/: manage.launch
workspace/src/spot_cartographer/scripts/: manage
workspace/src/spot_cartographer/src/spot_cartographer/: manage.py  point_cloud_tracker.py  refresh_point_cloud.py  sensor_fusion.py  sync.py
workspace/src/spot_compose/: CMakeLists.txt  package.xml
workspace/src/spot_compose/launch/: up.launch
workspace/src/spot_conductor/: CMakeLists.txt  package.xml  setup.py
workspace/src/spot_conductor/launch/: orchestrate.launch  pipeline.launch
workspace/src/spot_conductor/scripts/: manage
workspace/src/spot_conductor/src/: conductor.py
workspace/src/spot_conductor/src/spot_conductor/: conductor.py
workspace/src/spot_geography/: CMakeLists.txt  package.xml  setup.py
workspace/src/spot_geography/launch/: octomap.launch  pipeline.launch
workspace/src/spot_geography/scripts/: pipeline
workspace/src/spot_geography/src/spot_geography/: geography_broadcast.py
workspace/src/spot_geography/src/spot_geography/pipelines/: occupancy_computations.py  point_cloud_pipeline.py
workspace/src/spot_imu/: CMakeLists.txt  package.xml  setup.py
workspace/src/spot_imu/launch/: enable.launch
workspace/src/spot_imu/scripts/: enable_streaming
workspace/src/spot_imu/src/spot_imu/: stream.py
workspace/src/spot_move/: CMakeLists.txt  package.xml  setup.py
workspace/src/spot_move/launch/: enable.launch
workspace/src/spot_move/scripts/: __test_main  enable_movement
workspace/src/spot_move/src/spot_move/: conductor.py  main.py
workspace/src/spot_path_planner/: CMakeLists.txt  README.md  package.xml  setup.py
workspace/src/spot_path_planner/config/: rosbot.rviz
workspace/src/spot_path_planner/debug-tools/: plot-movement.py
workspace/src/spot_path_planner/launch/: main.launch
workspace/src/spot_path_planner/scripts/: graph_wrapper.py  main.py  publish_to_map.py  run  subscribe_to_map.py  utils.py
workspace/src/spot_path_planner/src/: d_star_lite.py  follow_path.py  grid.py  gui.py  gui_main.py  navtask.py  path_planner.py  publish_curr_pos.py  start_goal_publisher.py  tester.py
workspace/src/spot_path_planner/src/debug_tools/: map_data.py
workspace/src/spot_path_planner/src/navigator/: README.md  d_star_lite.py  main.py  utils.py
workspace/src/spot_path_planner/src/navigator-new/: grid.py
workspace/src/spot_path_planner/src/navigator_new/: README.md  grid.py
workspace/src/spot_path_planner/src/planner/: main.py
workspace/src/spot_slam/: .gitignore  CMakeLists.txt  DEPENDENCY.md  Dockerfile  IPC.md  README.md  ROSBAG.md  package.xml
workspace/src/spot_slam/config/: camera.rviz  convex.rviz  mono_rosbot.rviz  rgbd_rosbot.rviz  spotters_1080.rviz  spotters_mac.rviz
workspace/src/spot_slam/config/Monocular/: ORRBEC_ASTRA_GAZEBO.yaml  iPhone13_mini.yaml
workspace/src/spot_slam/config/Monocular-Inertial/: iPhone13_mini.yaml
workspace/src/spot_slam/config/RGB-D/: TUM1.yaml
workspace/src/spot_slam/include/: common.h
workspace/src/spot_slam/launch/: camera.launch  slam.launch
workspace/src/spot_slam/launch/datasets/: euroc_mono_inertial.launch  mapper_ntuviral_mono.launch  mapper_tum_rgbd.launch  tum_rgbd.launch
workspace/src/spot_slam/launch/rosbot/: rosbot_mono.launch  rosbot_mono_inertial.launch  rosbot_rgbd.launch
workspace/src/spot_slam/orb_slam3/include/: Tracking.h
workspace/src/spot_slam/orb_slam3/src/: System.cc  Tracking.cc
workspace/src/spot_slam/src/: common.cc  ros_mono.cc
