<?xml version="1.0"?>
<package format="2">
  <name>movement</name>
  <version>0.0.0</version>
  <description>The movement package</description>
  <maintainer email="kindaraffy@todo.todo">kindaraffy</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rospkg</exec_depend>
  <exec_depend>spot_driver</exec_depend>
</package>
