<?xml version="1.0"?>
<package format="2">
  <name>spot_cartographer</name>
  <version>0.0.0</version>
  <description>The spot_cartographer package</description>

  <maintainer email="contact@kindaraffy.xyz">kindaraffy</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <exec_depend>rospy</exec_depend>
</package>
