<?xml version="1.0"?>
<package format="2">
  <name>spot_geography</name>
  <version>0.0.0</version>
  <description>Synchronisation module to manage map persistance.</description>

  <maintainer email="contact@kindaraffy.xyz">kindaraffy</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
</package>
