<?xml version="1.0"?>
<package format="2">
  <name>spot_path_planner</name>
  <version>0.0.0</version>
  <description>Spot Path Planner Using DStar</description>
  <maintainer email="davidchermanto@gmail.com">davidchermanto</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rospkg</exec_depend>
  <exec_depend>spot_driver</exec_depend>
</package>
